Fix bug: input select hidden on iphone 4GS

--- a/www/modules/bootstrap_override/forms.less
+++ b/www/modules/bootstrap_override/forms.less
@@ -41,3 +41,6 @@ label {
   	right: 0;
   }
 }
+select.input-lg{
+  line-height: inherit;
+}
